Update pools for two pipelines

--- a/tools/pipelines/build-build-tools.yml
+++ b/tools/pipelines/build-build-tools.yml
@@ -107,7 +107,7 @@ extends:
     - test:copyresults
     taskLint: true
     taskLintName: ci:eslint
-    poolBuild: Large
+    poolBuild: NewLarge-linux-1ES
     checkoutSubmodules: true
     taskBundleAnalysis: false
     checks:
