--- a/tools/pipelines/build-bundle-size-artifacts.yml
+++ b/tools/pipelines/build-bundle-size-artifacts.yml
@@ -26,8 +26,8 @@ extends:
     packageManagerInstallCommand: 'pnpm i --frozen-lockfile'
     packageManager: pnpm
     buildDirectory: .
-    tagName: bundle-artifacts
-    poolBuild: Large
+    tagName: bundle-artifact
+    poolBuild: NewLarge-linux-1ES
     checkoutSubmodules: true
     releaseBuildOverride: none
     publishOverride: default
