--- a/tools/pipelines/build-bundle-size-artifacts.yml
+++ b/tools/pipelines/build-bundle-size-artifacts.yml
@@ -27,6 +27,8 @@ extends:
     packageManager: pnpm
     buildDirectory: .
     tagName: bundle-artifact
+    # This pipeline doesn't generate production artifacts but the build-npm-package template is too intertwined with
+    # that scenario, which requires that the pipeline runs in the 1ES pool.
     poolBuild: NewLarge-linux-1ES
     checkoutSubmodules: true
     releaseBuildOverride: none
