Add new required parameter

--- a/tools/pipelines/build-bundle-size-artifacts.yml
+++ b/tools/pipelines/build-bundle-size-artifacts.yml
@@ -17,6 +17,7 @@ trigger:
 extends:
   template: templates/build-npm-package.yml
   parameters:
+    publish: false
     taskLint: false
     taskTest: [] # no tests
     taskPack: false
