Add refresh to summary generator and update tests

--- a/packages/runtime/container-runtime/package.json
+++ b/packages/runtime/container-runtime/package.json
@@ -132,6 +132,9 @@
 			},
 			"InterfaceDeclaration_IGCStats": {
 				"forwardCompat": false
+			},
+			"InterfaceDeclaration_ISubmitSummaryOptions": {
+				"forwardCompat": false
 			}
 		}
 	}
