--- a/tools/pipelines/templates/include-publish-npm-package.yml
+++ b/tools/pipelines/templates/include-publish-npm-package.yml
@@ -9,7 +9,7 @@ parameters:
 
 - name: pool
   type: object
-  default: Small-1ES
+  default: Small
 
 - name: isReleaseGroup
   type: boolean
@@ -39,6 +39,8 @@ stages:
   displayName: Publish to internal build feed
   # This condition should match the condition for publish_npm_internal_dev
   condition: and(succeeded(), eq(variables['testBuild'], false))
+  variables:
+  - group: ado-feeds
   jobs:
   - template: include-publish-npm-package-deployment.yml
     parameters:
@@ -56,6 +58,8 @@ stages:
     displayName: Publish to internal dev feed
     # This condition should match the condition for publish_npm_internal_build
     condition: and(succeeded(), eq(variables['testBuild'], false))
+    variables:
+    - group: ado-feeds
     jobs:
     - template: include-publish-npm-package-deployment.yml
       parameters:
@@ -69,6 +73,8 @@ stages:
   dependsOn: build
   displayName: Publish to public npmjs.org
   condition: and(succeeded(), or(eq(variables['release'], 'release'), eq(variables['release'], 'prerelease')))
+  variables:
+  - group: ado-feeds
   jobs:
   - template: include-publish-npm-package-deployment.yml
     parameters:
