--- a/tools/pipelines/templates/include-publish-npm-package-steps.yml
+++ b/tools/pipelines/templates/include-publish-npm-package-steps.yml
@@ -15,10 +15,12 @@ parameters:
 
 - name: publishFlags
   type: string
-  default: ''
+  default:
+
 - name: customEndPoint
   type: string
-  default: ''
+  default:
+
 steps:
 - task: Bash@3
   displayName: Generate .npmrc for ${{ parameters.artifactPath }}
@@ -107,8 +109,10 @@ steps:
                 fi
             else
               feedId=$(grep -oP '_packaging/\K[^/]+(?=/npm/)' publish_log)
+
               if [[ $release == "release" && $feedId == "build" ]]; then
                 packageVersion=$(grep -oP 'npm notice version:\s+\K[^\s]+' publish_log)
+
                 if [ "${{ parameters.artifactPath }}" == "scoped" ]; then
                   scopes=("fluidframework" "fluid-tools" "fluid-internal" "fluid-experimental")
                   for scope in "${scopes[@]}"; do
@@ -117,8 +121,10 @@ steps:
                       fi
                   done
                 fi
+
                 baseURL="${${{ parameters.feedUrl }}%/registry/}"
                 feedPromotionUrl="${baseURL/_packaging/_apis/packaging/feeds}"
+
                 response=$(curl -f -s -X PATCH \
                   -H "Content-Type: application/json" \
                   -H "Accept: application/json" \
