--- a/tools/pipelines/templates/include-use-node-version.yml
+++ b/tools/pipelines/templates/include-use-node-version.yml
@@ -1,9 +1,14 @@
-# This Yaml Document has been converted by ESAI Yaml Pipeline Conversion Tool.
-# Please make sure to check all the converted content, it is your team's responsibility to make sure that the pipeline is still valid and functions as expected.
+# Copyright (c) Microsoft Corporation and contributors. All rights reserved.
+# Licensed under the MIT License.
+
+# include-use-node-version template to use a specific node version
+
 parameters:
+# The node version required. The version must already be installed in the image.
 - name: version
   type: string
   default: '18.17.1'
+
 steps:
 - task: Bash@3
   displayName: Set node version
