--- a/tools/pipelines/build-azure.yml
+++ b/tools/pipelines/build-azure.yml
@@ -11,17 +11,17 @@ parameters:
   type: string
   default: none
   values:
-  - none
-  - prerelease
-  - release
+    - none
+    - prerelease
+    - release
 - name: publishOverride
   displayName: Publish Override (default = based on branch)
   type: string
   default: default
   values:
-  - default
-  - skip
-  - force
+    - default
+    - skip
+    - force
 - name: buildToolsVersionToInstall
   displayName: Fluid build tools version (default = installs version in repo)
   type: string
@@ -41,16 +41,16 @@ trigger:
     - .prettierignore
     - azure
     - tools/pipelines/build-azure.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-steps.yml
-    - tools/pipelines/templates/1ES/include-git-tag-steps.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-publish-npm-package.yml
+    - tools/pipelines/templates/include-publish-npm-package-deployment.yml
+    - tools/pipelines/templates/include-publish-npm-package-steps.yml
+    - tools/pipelines/templates/include-git-tag-steps.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
     # Relevant to the test-azure-frs pipeline
     - packages/dds/map
@@ -59,7 +59,7 @@ trigger:
     - packages/framework/loader/container-loader
     - packages/test/test-end-to-end-tests
     - tools/pipelines/test-azure-frs.yml
-    - tools/pipelines/templates/1ES/include-test-real-service.yml
+    - tools/pipelines/templates/include-test-real-service.yml
 
 pr:
   branches:
@@ -75,16 +75,16 @@ pr:
     - .prettierignore
     - azure
     - tools/pipelines/build-azure.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-steps.yml
-    - tools/pipelines/templates/1ES/include-git-tag-steps.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-publish-npm-package.yml
+    - tools/pipelines/templates/include-publish-npm-package-deployment.yml
+    - tools/pipelines/templates/include-publish-npm-package-steps.yml
+    - tools/pipelines/templates/include-git-tag-steps.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
     # Relevant to the test-azure-frs pipeline
     - packages/dds/map
@@ -93,10 +93,10 @@ pr:
     - packages/framework/loader/container-loader
     - packages/test/test-end-to-end-tests
     - tools/pipelines/test-azure-frs.yml
-    - tools/pipelines/templates/1ES/include-test-real-service.yml
+    - tools/pipelines/templates/include-test-real-service.yml
 
 extends:
-  template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
+  template: templates/build-npm-package.yml
   parameters:
     publishOverride: ${{ parameters.publishOverride }}
     releaseBuildOverride: ${{ parameters.releaseBuildOverride }}
@@ -105,6 +105,6 @@ extends:
     packageManager: pnpm
     buildDirectory: azure
     tagName: azure
-    poolBuild: NewLarge-linux-1ES
+    poolBuild: Large
     checkoutSubmodules: true
     taskBundleAnalysis: false
