--- a/tools/pipelines/build-benchmark-tool.yml
+++ b/tools/pipelines/build-benchmark-tool.yml
@@ -11,17 +11,17 @@ parameters:
   type: string
   default: none
   values:
-  - none
-  - prerelease
-  - release
+    - none
+    - prerelease
+    - release
 - name: publishOverride
   displayName: Publish Override (default = based on branch)
   type: string
   default: default
   values:
-  - default
-  - skip
-  - force
+    - default
+    - skip
+    - force
 - name: buildToolsVersionToInstall
   displayName: Fluid build tools version (default = installs version in repo)
   type: string
@@ -38,16 +38,17 @@ trigger:
     - .prettierignore
     - tools/benchmark
     - tools/pipelines/build-benchmark-tool.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-steps.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-publish-npm-package.yml
+    - tools/pipelines/templates/include-publish-npm-package-deployment.yml
+    - tools/pipelines/templates/include-publish-npm-package-steps.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
+
 pr:
   branches:
     include:
@@ -60,25 +61,17 @@ pr:
     - .prettierignore
     - tools/benchmark
     - tools/pipelines/build-benchmark-tool.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
 
-variables:
-  - template: /tools/pipelines/templates/1ES/include-vars.yml@self
-    parameters:
-      publishOverride: '${{ parameters.publishOverride }}'
-      releaseBuildOverride: '${{ parameters.releaseBuildOverride }}'
-      buildNumberInPatch: ''
-
 extends:
-  template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
+  template: templates/build-npm-package.yml
   parameters:
-    publish: ${{ variables.publish }}
     publishOverride: ${{ parameters.publishOverride }}
     releaseBuildOverride: ${{ parameters.releaseBuildOverride }}
     buildToolsVersionToInstall: ${{ parameters.buildToolsVersionToInstall }}
