--- a/tools/pipelines/build-client.yml
+++ b/tools/pipelines/build-client.yml
@@ -71,16 +71,16 @@ trigger:
     - pnpm-workspace.yaml
     - tools/pipelines/build-client.yml
     - tools/pipelines/build-azure.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
-    - tools/pipelines/templates/1ES/include-publish-npm-package-steps.yml
-    - tools/pipelines/templates/1ES/include-git-tag-steps.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-publish-npm-package.yml
+    - tools/pipelines/templates/include-publish-npm-package-deployment.yml
+    - tools/pipelines/templates/include-publish-npm-package-steps.yml
+    - tools/pipelines/templates/include-git-tag-steps.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
 
 pr:
@@ -104,26 +104,18 @@ pr:
     - fluidBuild.config.cjs
     - tools/pipelines/build-client.yml
     - tools/pipelines/build-azure.yml
-    - tools/pipelines/templates/1ES/build-npm-package.yml
-    - tools/pipelines/templates/1ES/include-policy-check.yml
-    - tools/pipelines/templates/1ES/include-set-package-version.yml
-    - tools/pipelines/templates/1ES/include-vars.yml
-    - tools/pipelines/templates/1ES/include-install-pnpm.yml
-    - tools/pipelines/templates/1ES/include-use-node-version.yml
-    - tools/pipelines/templates/1ES/include-process-test-results.yml
+    - tools/pipelines/templates/build-npm-package.yml
+    - tools/pipelines/templates/include-policy-check.yml
+    - tools/pipelines/templates/include-set-package-version.yml
+    - tools/pipelines/templates/include-vars.yml
+    - tools/pipelines/templates/include-install-pnpm.yml
+    - tools/pipelines/templates/include-use-node-version.yml
+    - tools/pipelines/templates/include-process-test-results.yml
     - scripts/*
 
-variables:
-  - template: /tools/pipelines/templates/1ES/include-vars.yml@self
-    parameters:
-      publishOverride: '${{ parameters.publishOverride }}'
-      releaseBuildOverride: '${{ parameters.releaseBuildOverride }}'
-      buildNumberInPatch: ''
-
 extends:
-  template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
+  template: templates/build-npm-package.yml
   parameters:
-    publish: ${{ variables.publish }}
     publishOverride: ${{ parameters.publishOverride }}
     releaseBuildOverride: ${{ parameters.releaseBuildOverride }}
     packageTypesOverride: ${{ parameters.packageTypesOverride }}
@@ -134,7 +126,7 @@ extends:
     buildDirectory: .
     tagName: client
     isReleaseGroup: true
-    poolBuild: NewLarge-linux-1ES
+    poolBuild: NewLarge
     checkoutSubmodules: true
     taskBundleAnalysis: true
     taskLint: false # Linting is captured by `ci:build` via fluid-build
@@ -182,7 +174,7 @@ extends:
         workingDir: ./packages/tools/devtools/devtools-browser-extension/
         customCommand: 'run webpack'
 
-    - task: 1ES.PublishPipelineArtifact@1
+    - task: PublishPipelineArtifact@1
       displayName: Publish Artifact - Devtools Browser Extension
       inputs:
         targetPath: './packages/tools/devtools/devtools-browser-extension/dist/bundle/'
