--- a/tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
+++ b/tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml
@@ -53,6 +53,6 @@ jobs:
               customEndPoint: ${{ parameters.customEndPoint }}
               feedKind: ${{ parameters.feedKind }}
               publishFlags: ${{ parameters.publishFlags }}
-          - template: include-git-tag-steps.yml
+          - template: /tools/pipelines/templates/1ES/include-git-tag-steps.yml@self
             parameters:
               tagName: ${{ parameters.tagName }}
