--- a/tools/pipelines/templates/1ES/include-publish-npm-package.yml
+++ b/tools/pipelines/templates/1ES/include-publish-npm-package.yml
@@ -25,7 +25,7 @@ stages:
   variables:
   - group: ado-feeds
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: $(ado-feeds-test) # Comes from the ado-feeds variable group
       feedKind: internal-test
@@ -40,7 +40,7 @@ stages:
   # This condition should match the condition for publish_npm_internal_dev
   condition: and(succeeded(), eq(variables['testBuild'], false))
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: $(ado-feeds-build) # Comes from the ado-feeds variable group
       feedKind: internal-build
@@ -57,7 +57,7 @@ stages:
     # This condition should match the condition for publish_npm_internal_build
     condition: and(succeeded(), eq(variables['testBuild'], false))
     jobs:
-    - template: include-publish-npm-package-deployment.yml
+    - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
       parameters:
         feedUrl: $(ado-feeds-dev) # Comes from the ado-feeds variable group
         feedKind: internal-dev
@@ -70,7 +70,7 @@ stages:
   displayName: Publish to public npmjs.org
   condition: and(succeeded(), or(eq(variables['release'], 'release'), eq(variables['release'], 'prerelease')))
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: https://registry.npmjs.org
       feedKind: public
