refactor(devtools): Don't expose DevtoolsLogger class

--- a/packages/tools/devtools/devtools-core/package.json
+++ b/packages/tools/devtools/devtools-core/package.json
@@ -127,6 +127,15 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_DevtoolsLogger": {
+				"backCompat": false,
+				"forwardCompat": false
+			},
+			"RemovedClassDeclaration_DevtoolsLogger": {
+				"backCompat": false,
+				"forwardCompat": false
+			}
+		}
 	}
 }
