Hoist the FORCE_COLOR variable to include-vars

--- a/tools/pipelines/templates/1ES/include-vars.yml
+++ b/tools/pipelines/templates/1ES/include-vars.yml
@@ -20,6 +20,11 @@ parameters:
   type: string
 
 variables:
+# We use 'chalk' to colorize output, which auto-detects color support in the
+# running terminal. The log output shown in Azure DevOps job runs only has
+# basic ANSI color support though, so force that in the pipeline
+- name: FORCE_COLOR
+  value: 1
 - group: prague-key-vault
 - name: skipComponentGovernanceDetection
   value: true
