--- a/tools/pipelines/test-azure-frs.yml
+++ b/tools/pipelines/test-azure-frs.yml
@@ -27,6 +27,9 @@ variables:
 - name: testPackage
   value: "@fluidframework/azure-end-to-end-tests"
   readonly: true
+- name: testOdspPackage
+  value: "@fluidframework/odsp-end-to-end-tests"
+  readonly: true
 
 stages:
   # Run Azure Client FRS Tests
@@ -63,3 +66,25 @@ stages:
           # Disable colorization for tinylicious logs (not useful when printing to a file)
           logger__colorize: "false" # Need to pass it as string so ADO doesn't convert it into False (capital F) which doesn't work
           logger__morganFormat: tiny
+  
+  - stage:
+    displayName: e2e - odsp client with odsp 
+    dependsOn: []
+    jobs:
+    - template: templates/include-test-real-service.yml
+      parameters:
+        poolBuild: Small
+        testPackage: ${{ variables.testOdspPackage }}
+        testWorkspace: ${{ variables.testWorkspace }}
+        testCommand: test:realsvc:odsp:run
+        artifactBuildId: $(resources.pipeline.client.runID)
+        env:
+          FLUID_TEST_LOGGER_PKG_PATH: ${{ variables.testWorkspace }}/node_modules/@ff-internal/aria-logger # Contains getTestLogger impl to inject
+          odsp__client__client__id: $(odsp-client-clientId)
+          odsp__client__client__secret: $(odsp-client-clientSecret)
+          odsp__client__siteUrl: $(odsp-client-siteUrl)
+          odsp__client__driveId: $(odsp-client-driveId)
+          odsp__client__login__username: $(odsp-client-login-username)
+          odsp__client__login__password: $(odsp-client-login-password)
+          odsp__client2__login__username: $(odsp-client2-login-username)
+          odsp__client2__login__password: $(odsp-client2-login-password)
