--- a/tools/pipelines/templates/build-npm-package.yml
+++ b/tools/pipelines/templates/build-npm-package.yml
@@ -546,9 +546,9 @@ stages:
         - build
         # NOTE: This is brittle; we need to only apply these stage dependencies when the corresponding stages actually
         # get created in the pipeline, in the include-publish-npm-package.yml file, so we want to match the compile-time
-        # conditions that exist there. At some point it might be preferable to always create the stages, control their
-        # execution with 'condition:', and update this stage to always depend on all previous stages (while still
-        # running if some of the dependencies were skipped).
+        # conditions *and exact stage names* that exist there. At some point it might be preferable to always create the
+        # stages, control their execution with 'condition:', and update this stage to always depend on all previous
+        # stages (while still running if some of the dependencies were skipped).
         - ${{ if eq(variables.publish, true) }}:
           - ${{ if eq(variables['testBuild'], true) }}:
             - publish_npm_internal_test
