--- a/tools/pipelines/templates/include-publish-npm-package-steps.yml
+++ b/tools/pipelines/templates/include-publish-npm-package-steps.yml
@@ -108,11 +108,11 @@ steps:
                   exit 1
                 fi
             else
-              feedId=$(grep -oP '_packaging/\K[^/]+(?=/npm/)' publish_log)
-
-              if [[ $release == "release" && $feedId == "build" ]]; then
+              feedName=$(grep -oP '_packaging/\K[^/]+(?=/npm/)' publish_log)
+              echo "FeedName: $feedName"
+              if [[ $release == "release" && $feedName == "build" ]]; then
                 packageVersion=$(grep -oP 'npm notice version:\s+\K[^\s]+' publish_log)
-
+                echo "PackageVersion: $packageVersion"
                 if [ "${{ parameters.artifactPath }}" == "scoped" ]; then
                   scopes=("fluidframework" "fluid-tools" "fluid-internal" "fluid-experimental")
                   for scope in "${scopes[@]}"; do
@@ -123,8 +123,9 @@ steps:
                 fi
 
                 baseURL="${${{ parameters.feedUrl }}%/registry/}"
-                feedPromotionUrl="${baseURL/_packaging/_apis/packaging/feeds}"
+                feedPromotionUrl="${baseURL}/_packaging/_apis/packaging/feeds"
 
+                echo "Feed Promotion URL: $feedPromotionUrl"
                 response=$(curl -f -s -X PATCH \
                   -H "Content-Type: application/json" \
                   -H "Accept: application/json" \
