--- a/tools/pipelines/templates/include-publish-npm-package.yml
+++ b/tools/pipelines/templates/include-publish-npm-package.yml
@@ -27,7 +27,7 @@ stages:
   jobs:
   - template: include-publish-npm-package-deployment.yml
     parameters:
-      feedUrl: $(ado-feeds-test) # Comes from the ado-feeds variable group
+      feedUrl: $(ado-feeds-test-absander) # Comes from the ado-feeds variable group
       feedKind: internal-test
       environment: test-package-build-feed
       pool: ${{ parameters.pool }}
