Add more debug info with a theory on why run is unsuccessful

--- a/tools/pipelines/templates/include-publish-npm-package-steps.yml
+++ b/tools/pipelines/templates/include-publish-npm-package-steps.yml
@@ -110,7 +110,9 @@ steps:
             else
               feedName=$(grep -oP '_packaging/\K[^/]+(?=/npm/)' publish_log)
               echo "FeedName: $feedName"
-              if [[ $release == "release" && $feedName == "test-absander" ]]; then
+              echo "Release: $release"
+              echo "Release from pipeline: $(release)"
+              if [[ $feedName == "test-absander" ]]; then
                 packageVersion=$(grep -oP 'npm notice version:\s+\K[^\s]+' publish_log)
                 echo "PackageVersion: $packageVersion"
                 if [ "${{ parameters.artifactPath }}" == "scoped" ]; then
