--- a/tools/pipelines/templates/build-npm-package.yml
+++ b/tools/pipelines/templates/build-npm-package.yml
@@ -300,64 +300,64 @@ stages:
             buildDirectory: ${{ parameters.buildDirectory }}
 
         # Test
-        # - ${{ if ne(convertToJson(parameters.taskTest), '[]') }}:
-        #   # Set variable startTest if the build succeed so that we can run all the test tasks whether they are failed or not
-        #   - script: |
-        #       echo "##vso[task.setvariable variable=startTest]true"
-        #     displayName: Start Test
+        - ${{ if ne(convertToJson(parameters.taskTest), '[]') }}:
+          # Set variable startTest if the build succeed so that we can run all the test tasks whether they are failed or not
+          - script: |
+              echo "##vso[task.setvariable variable=startTest]true"
+            displayName: Start Test
 
-        #   - ${{ each taskTestStep in parameters.taskTest }}:
-        #     - template: include-test-task.yml
-        #       parameters:
-        #         taskTestStep: ${{ taskTestStep }}
-        #         buildDirectory: ${{ parameters.buildDirectory }}
+          - ${{ each taskTestStep in parameters.taskTest }}:
+            - template: include-test-task.yml
+              parameters:
+                taskTestStep: ${{ taskTestStep }}
+                buildDirectory: ${{ parameters.buildDirectory }}
 
-        #   # Test - Upload coverage results
-        #   # Some webpacked file using externals introduce file name with quotes in them
-        #   # and Istanbul's cobertura reporter doesn't escape them causing parse error when we publish
-        #   # A quick fix to patch the file with sed. (See https://github.com/bcoe/c8/issues/302)
-        #   - ${{ if eq(variables['testCoverage'], true) }}:
-        #     - task: Bash@3
-        #       displayName: 'Check for nyc/report directory'
-        #       inputs:
-        #         targetType: 'inline'
-        #         workingDirectory: ${{ parameters.buildDirectory }}
-        #         script: |
-        #           test -d nyc/report && echo '##vso[task.setvariable variable=ReportDirExists;]true' || echo 'No nyc/report directory'
-        #       condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
-        #     - task: Bash@3
-        #       displayName: Patch Coverage Results
-        #       inputs:
-        #         targetType: 'inline'
-        #         workingDirectory: ${{ parameters.buildDirectory }}/nyc/report
-        #         script: |
-        #           sed -e 's/\(filename=\".*[\\/]external .*\)"\(.*\)""/\1\&quot;\2\&quot;"/' cobertura-coverage.xml > cobertura-coverage-patched.xml
-        #       condition: and(succeededOrFailed(), eq(variables['ReportDirExists'], 'true'))
-        #     - task: PublishCodeCoverageResults@1
-        #       displayName: Publish Code Coverage
-        #       inputs:
-        #         codeCoverageTool: Cobertura
-        #         summaryFileLocation: ${{ parameters.buildDirectory }}/nyc/report/cobertura-coverage-patched.xml
-        #         reportDirectory: ${{ parameters.buildDirectory }}/nyc/report
-        #         failIfCoverageEmpty: true
-        #       condition: and(succeededOrFailed(), eq(variables['ReportDirExists'], 'true'))
+          # Test - Upload coverage results
+          # Some webpacked file using externals introduce file name with quotes in them
+          # and Istanbul's cobertura reporter doesn't escape them causing parse error when we publish
+          # A quick fix to patch the file with sed. (See https://github.com/bcoe/c8/issues/302)
+          - ${{ if eq(variables['testCoverage'], true) }}:
+            - task: Bash@3
+              displayName: 'Check for nyc/report directory'
+              inputs:
+                targetType: 'inline'
+                workingDirectory: ${{ parameters.buildDirectory }}
+                script: |
+                  test -d nyc/report && echo '##vso[task.setvariable variable=ReportDirExists;]true' || echo 'No nyc/report directory'
+              condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
+            - task: Bash@3
+              displayName: Patch Coverage Results
+              inputs:
+                targetType: 'inline'
+                workingDirectory: ${{ parameters.buildDirectory }}/nyc/report
+                script: |
+                  sed -e 's/\(filename=\".*[\\/]external .*\)"\(.*\)""/\1\&quot;\2\&quot;"/' cobertura-coverage.xml > cobertura-coverage-patched.xml
+              condition: and(succeededOrFailed(), eq(variables['ReportDirExists'], 'true'))
+            - task: PublishCodeCoverageResults@1
+              displayName: Publish Code Coverage
+              inputs:
+                codeCoverageTool: Cobertura
+                summaryFileLocation: ${{ parameters.buildDirectory }}/nyc/report/cobertura-coverage-patched.xml
+                reportDirectory: ${{ parameters.buildDirectory }}/nyc/report
+                failIfCoverageEmpty: true
+              condition: and(succeededOrFailed(), eq(variables['ReportDirExists'], 'true'))
 
-        #   # Publish tinylicious log for troubleshooting
-        #   - ${{ if contains(convertToJson(parameters.taskTest), 'tinylicious') }}:
-        #     - task: PublishPipelineArtifact@1
-        #       displayName: Publish Artifact - Tinylicious Log
-        #       inputs:
-        #         targetPath: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests/tinylicious.log'
-        #         artifactName: 'tinyliciousLog_attempt-$(System.JobAttempt)'
-        #         publishLocation: 'pipeline'
-        #       condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
-        #       continueOnError: true # Keep running subsequent tasks even if this one fails (e.g. the tinylicious log wasn't there)
+          # Publish tinylicious log for troubleshooting
+          - ${{ if contains(convertToJson(parameters.taskTest), 'tinylicious') }}:
+            - task: PublishPipelineArtifact@1
+              displayName: Publish Artifact - Tinylicious Log
+              inputs:
+                targetPath: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests/tinylicious.log'
+                artifactName: 'tinyliciousLog_attempt-$(System.JobAttempt)'
+                publishLocation: 'pipeline'
+              condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
+              continueOnError: true # Keep running subsequent tasks even if this one fails (e.g. the tinylicious log wasn't there)
 
-        #   # Process test result, include publishing and logging
-        #   - template: include-process-test-results.yml
-        #     parameters:
-        #       buildDirectory: ${{ parameters.buildDirectory }}
-        #       testResultDirs: ${{ parameters.testResultDirs }}
+          # Process test result, include publishing and logging
+          - template: include-process-test-results.yml
+            parameters:
+              buildDirectory: ${{ parameters.buildDirectory }}
+              testResultDirs: ${{ parameters.testResultDirs }}
 
         # Pack
         - ${{ if ne(parameters.taskPack, false) }}:
