Add prettier extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,7 @@
 		"vscode": {
 			"extensions": [
 				"dbaeumer.vscode-eslint",
+				"esbenp.prettier-vscode",
 				"ms-azuretools.vscode-docker",
 				"mutantdino.resourcemonitor"
 			]
