refactor(devtools): Don't expose DevtoolsLogger class (#18766)
As a general rule, we prefer not to export classes, as it hinders our
ability to make implementation changes making breaking API changes.

This PR replaces the class export with an interface and a factory
function.

The interface is annotated as `@sealed` and contains documentation
noting to the user that they **must** pass back in the same logger that
was created with our factory function when initializing the devtools,
and that external implementations of the interface are not supported.

There are some nicer patterns we can consider here in the future to
better encapsulate the behaviors we actually need, but for now this at
least allows us to not expose the implementation details of the logger
in the API.

--- a/packages/tools/devtools/devtools-core/package.json
+++ b/packages/tools/devtools/devtools-core/package.json
@@ -128,6 +128,10 @@
 	},
 	"typeValidation": {
 		"broken": {
+			"ClassDeclaration_DevtoolsLogger": {
+				"backCompat": false,
+				"forwardCompat": false
+			},
 			"InterfaceDeclaration_ContainerDevtoolsProps": {
 				"backCompat": false
 			},
@@ -168,6 +172,10 @@
 				"forwardCompat": false
 			},
 			"TypeAliasDeclaration_VisualNode": {
+				"forwardCompat": false
+			},
+			"RemovedClassDeclaration_DevtoolsLogger": {
+				"backCompat": false,
 				"forwardCompat": false
 			}
 		}
