Update type test config and logic to check previous package.json

--- a/build-tools/packages/build-tools/package.json
+++ b/build-tools/packages/build-tools/package.json
@@ -96,5 +96,10 @@
 				"typescript"
 			]
 		}
+	},
+	"typeValidation": {
+		"disabled": false,
+		"broken": {},
+		"typeRollupFile": "packageName.alpha.d.ts"
 	}
 }
