updated rollup file name

--- a/build-tools/packages/build-tools/package.json
+++ b/build-tools/packages/build-tools/package.json
@@ -100,6 +100,6 @@
 	"typeValidation": {
 		"disabled": false,
 		"broken": {},
-		"typeRollupFile": "packageName.alpha.d.ts"
+		"typeRollupFile": "dist/build-tools.alpha.d.ts"
 	}
 }
