--- a/packages/drivers/debugger/package.json
+++ b/packages/drivers/debugger/package.json
@@ -54,7 +54,7 @@
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/replay-driver": "workspace:~",
 		"jsonschema": "^1.2.6"
 	},
