--- a/packages/loader/driver-utils/package.json
+++ b/packages/loader/driver-utils/package.json
@@ -69,8 +69,8 @@
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
-		"@fluidframework/gitresources": "^2.0.1",
-		"@fluidframework/protocol-base": "^2.0.1",
+		"@fluidframework/gitresources": "^3.0.0-223236",
+		"@fluidframework/protocol-base": "^3.0.0-223236",
 		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^1.6.2",
