--- a/azure/packages/azure-client/package.json
+++ b/azure/packages/azure-client/package.json
@@ -70,7 +70,7 @@
 		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
-		"@fluidframework/server-services-client": "^2.0.1",
+		"@fluidframework/server-services-client": "^3.0.0-223236",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^1.6.2"
 	},
