--- a/packages/runtime/id-compressor/tsconfig.json
+++ b/packages/runtime/id-compressor/tsconfig.json
@@ -1,7 +1,9 @@
 {
-	"extends": "@fluidframework/build-common/ts-common-config.json",
+	"extends": [
+		"../../../common/build/build-common/tsconfig.base.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
+	],
 	"compilerOptions": {
-		"composite": true,
 		"rootDir": "./src",
 		"outDir": "./dist",
 	},
